Fixed overflow issue on resume

--- a/src/Styles/Resume.css
+++ b/src/Styles/Resume.css
@@ -78,10 +78,12 @@
     font-style: italic;
 }
 
+
 .resume-coursework-list{
     display: grid;
+    background-color: grey;
     margin-top: 1rem;
-    grid-template-columns: repeat(4, 17.7em);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .resume-coursework-list li{
